[gd_scene load_steps=47 format=3 uid="uid://qigdud1qd548"]

[ext_resource type="Script" uid="uid://4y6b4ptruqva" path="res://scripts/bat.gd" id="1_lv0ya"]
[ext_resource type="Shader" uid="uid://cccw2sr8fwgb8" path="res://scenes/skeleton.gdshader" id="2_fd6lc"]
[ext_resource type="Texture2D" uid="uid://4v1mplw52bap" path="res://assets/Enemies/Bat Dive.png" id="3_5fn3r"]
[ext_resource type="Texture2D" uid="uid://d4beplcy4vgwv" path="res://assets/Enemies/New Piskel(1).png" id="4_8qtcx"]
[ext_resource type="Texture2D" uid="uid://cbcf70yp3jvct" path="res://assets/Enemies/Bat Dive swoosh.png" id="5_x4bhu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vnioy"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rp1f2"]
radius = 200.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v5wyi"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 32.25
initial_velocity_max = 102.15
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 2.0
color = Color(0.227451, 0.180392, 0.309804, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gstla"]
resource_local_to_scene = true
shader = ExtResource("2_fd6lc")
shader_parameter/solid_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0o7o"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67y1s"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5otw"]
atlas = ExtResource("3_5fn3r")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjjhm"]
atlas = ExtResource("3_5fn3r")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8eff"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrah6"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drkvk"]
atlas = ExtResource("3_5fn3r")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1j7x"]
atlas = ExtResource("3_5fn3r")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk2sj"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjde2"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p43al"]
atlas = ExtResource("4_8qtcx")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v45h3"]
atlas = ExtResource("4_8qtcx")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bnbw"]
atlas = ExtResource("4_8qtcx")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ial8"]
atlas = ExtResource("4_8qtcx")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x6ks"]
atlas = ExtResource("4_8qtcx")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86kk5"]
atlas = ExtResource("4_8qtcx")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnpbf"]
atlas = ExtResource("4_8qtcx")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuti2"]
atlas = ExtResource("4_8qtcx")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m0mp"]
atlas = ExtResource("4_8qtcx")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60pq2"]
atlas = ExtResource("4_8qtcx")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv41e"]
atlas = ExtResource("4_8qtcx")
region = Rect2(48, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn0sf"]
atlas = ExtResource("4_8qtcx")
region = Rect2(72, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pphv1"]
atlas = ExtResource("5_x4bhu")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss3wr"]
atlas = ExtResource("5_x4bhu")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0imbl"]
atlas = ExtResource("5_x4bhu")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smajg"]
atlas = ExtResource("5_x4bhu")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qtcx"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4bhu"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 64, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5yng"]
atlas = ExtResource("3_5fn3r")
region = Rect2(72, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2fsa"]
atlas = ExtResource("3_5fn3r")
region = Rect2(48, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_etylc"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn0w6"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 32, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idg78"]
atlas = ExtResource("3_5fn3r")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk23r"]
atlas = ExtResource("3_5fn3r")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jctg"]
atlas = ExtResource("3_5fn3r")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27o3n"]
atlas = ExtResource("3_5fn3r")
region = Rect2(0, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jn7vh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0o7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67y1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5otw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjjhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8eff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrah6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drkvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1j7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk2sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjde2")
}],
"loop": false,
"name": &"dive",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p43al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v45h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bnbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ial8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x6ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86kk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnpbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuti2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m0mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60pq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv41e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn0sf")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pphv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss3wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0imbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smajg")
}],
"loop": true,
"name": &"swoosh",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qtcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4bhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5yng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2fsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etylc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn0w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idg78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk23r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jctg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27o3n")
}],
"loop": false,
"name": &"undive",
"speed": 60.0
}]

[node name="Bat" type="CharacterBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource("1_lv0ya")

[node name="diveDelay" type="Timer" parent="."]
wait_time = 0.13
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vnioy")

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_rp1f2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vnioy")

[node name="hitEffect" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GPUParticlesExplode" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.15
one_shot = true
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_v5wyi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_gstla")
sprite_frames = SubResource("SpriteFrames_jn7vh")
animation = &"idle"
autoplay = "idle"
frame = 3
frame_progress = 0.0890178
offset = Vector2(0, -4)

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
